--- a/app/src/main/res/layout/activity_sample_edit.xml
+++ b/app/src/main/res/layout/activity_sample_edit.xml
@@ -7,28 +7,12 @@
     tools:context=".MainActivity">
 
 
-    <com.nakedape.mixmaticlooppad.AudioSampleView
+    <com.nakedape.mixmaticlooppadpro.AudioSampleView
         android:id="@+id/spectralView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <com.amazon.device.ads.AdLayout
-        android:id="@+id/amazonAdView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"/>
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adMobAdView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/sample_edit_banner_ad_id"
-        android:visibility="gone"/>
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
