--- a/app/src/main/res/layout/activity_sample_edit_preferences.xml
+++ b/app/src/main/res/layout/activity_sample_edit_preferences.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.nakedape.mixmaticlooppad.EditPreferencesActivity">
+    tools:context="com.nakedape.mixmaticlooppadpro.EditPreferencesActivity">
 
 
 </RelativeLayout>
