--- a/app/src/main/res/menu/touch_pad.xml
+++ b/app/src/main/res/menu/touch_pad.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nakedape.mixmaticlooppad.LaunchPadActivity" >
+    tools:context="com.nakedape.mixmaticlooppadpro.LaunchPadActivity" >
     <item android:id="@+id/action_play"
         android:title="@string/action_play_back"
         android:icon="@drawable/ic_action_av_play_arrow"
