--- a/app/src/main/res/layout-land/activity_launch_pad.xml
+++ b/app/src/main/res/layout-land/activity_launch_pad.xml
@@ -57,42 +57,42 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad4"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick"/>
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad8"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad12"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick"/>
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad16"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad20"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick"/>
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad24"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -105,42 +105,42 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad3"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad7"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad11"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad15"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad19"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad23"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -153,42 +153,42 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad2"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick"/>
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad6"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad10"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick"/>
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad14"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad18"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad22"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -201,42 +201,42 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad1"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad5"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad9"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick"/>
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad13"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad17"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:background="@drawable/launch_pad_empty"
             android:onClick="touchPadClick" />
-        <com.nakedape.mixmaticlooppadpro.TouchPad
+        <com.nakedape.mixmaticlooppad.TouchPad
             android:id="@+id/touchPad21"
             android:layout_width="0dp"
             android:layout_weight="1"
