--- a/app/src/main/res/menu/sample_edit_preferences.xml
+++ b/app/src/main/res/menu/sample_edit_preferences.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nakedape.mixmaticlooppadpro.EditPreferencesActivity" >
+    tools:context="com.nakedape.mixmaticlooppad.EditPreferencesActivity" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
