--- a/app/src/main/res/xml/launchpad_preferences.xml
+++ b/app/src/main/res/xml/launchpad_preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.nakedape.mixmaticlooppadpro.NumberPickerPreference
+    <com.nakedape.mixmaticlooppad.NumberPickerPreference
         android:key="pref_bpm"
         android:title="@string/pref_bpm"
         android:persistent="true"
