--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nakedape.mixmaticlooppad.StoreActivity"
-    android:id="@+id/activity_store"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -32,5 +35,6 @@
     <ListView android:id="@+id/store_item_list"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"/>
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
