--- a/app/src/main/res/layout/store_sample_pack_item.xml
+++ b/app/src/main/res/layout/store_sample_pack_item.xml
@@ -1,46 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="8dp">
+
+    <TextView android:id="@+id/title_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
+        android:textSize="20sp"/>
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical">
     <ImageView android:id="@+id/image_view"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center_vertical"
+        android:visibility="visible"/>
+    <ProgressBar android:id="@+id/loading_circle_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"/>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center_vertical">
-        <TextView android:id="@+id/title_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="Title Text"/>
+        android:orientation="vertical">
         <TextView android:id="@+id/genre_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Genre"/>
+            android:layout_height="wrap_content"/>
         <TextView android:id="@+id/details_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Details"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
         android:gravity="center_horizontal">
         <TextView android:id="@+id/price_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="$2.00"/>
+            android:layout_height="wrap_content"/>
         <Button android:id="@+id/purchase_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Buy"/>
+            android:text="@string/buy"
+            android:visibility="gone"/>
+    </LinearLayout>
+    </LinearLayout>
+    <LinearLayout android:id="@+id/status_bar_linear_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:visibility="gone">
+        <TextView android:id="@+id/status_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/downloading"/>
+        <ProgressBar android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            style="@style/Widget.AppCompat.SeekBar" />
     </LinearLayout>
 </LinearLayout>
