--- a/app/src/main/res/layout/store_sample_pack_item.xml
+++ b/app/src/main/res/layout/store_sample_pack_item.xml
@@ -32,6 +32,9 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <TextView android:id="@+id/bpm_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <TextView android:id="@+id/genre_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
