--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,26 @@
     <color name="button_pressed">#cccccc</color>
     <color name="transparent">#00000000</color>
     <color name="red">#FF0000</color>
+    <color name="black">#000000</color>
 
-    <color name="primary">#9E9E9E</color>
-    <color name="primary_dark">#212121</color>
-    <color name="primary_accent">#FFB74D</color>
+    <color name="primary">@color/md_grey_800</color>
+    <color name="primary_dark">@color/md_grey_900</color>
+    <color name="primary_accent">#FF6D00</color>
     <color name="text_primary_dark">#D6000000</color>
     <color name="text_primary_light">#FFFFFF</color>
+
+    <!--grey-->
+    <color name="md_grey_50">#FAFAFA</color>
+    <color name="md_grey_100">#F5F5F5</color>
+    <color name="md_grey_200">#EEEEEE</color>
+    <color name="md_grey_300">#E0E0E0</color>
+    <color name="md_grey_400">#BDBDBD</color>
+    <color name="md_grey_500">#9E9E9E</color>
+    <color name="md_grey_600">#757575</color>
+    <color name="md_grey_700">#616161</color>
+    <color name="md_grey_800">#424242</color>
+    <color name="md_grey_900">#212121</color>
+    <color name="md_black_1000">#000000</color>
+    <color name="md_white_1000">#ffffff</color>
 
 </resources>
