--- a/app/src/main/res/drawable/button_grey.xml
+++ b/app/src/main/res/drawable/button_grey.xml
@@ -2,7 +2,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#444" />
+    <solid android:color="@color/md_grey_500" />
     <stroke android:color="#0000"
         android:width="4dp"/>
     <corners android:radius="5dp" />
