--- a/app/src/main/res/drawable/button_grey_selected.xml
+++ b/app/src/main/res/drawable/button_grey_selected.xml
@@ -2,8 +2,8 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#444" />
-    <stroke android:color="#ff9dd0d3"
+    <solid android:color="@color/md_grey_500" />
+    <stroke android:color="@color/primary_accent"
         android:width="4dp"/>
     <corners android:radius="5dp" />
     <padding android:bottom="5dp"
