--- a/app/src/main/res/layout/activity_sample_edit.xml
+++ b/app/src/main/res/layout/activity_sample_edit.xml
@@ -4,7 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rootLayout"
-    tools:context=".MainActivity">
+    tools:context=".SampleEditActivity">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
 
     <com.nakedape.mixmaticlooppad.AudioSampleView
@@ -12,7 +19,53 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/my_toolbar"/>
+
+    <!-- Touchpad Toolbar-->
+    <LinearLayout android:id="@+id/pad_toolbar"
+        android:layout_width="44dp"
+        android:layout_height="wrap_content"
+        android:padding="2dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_centerVertical="true"
+        android:background="@color/primary"
+        android:translationX="0dp"
+        android:visibility="visible"> <!-- -44dp -->
+        <ImageButton android:id="@+id/action_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@drawable/ic_action_select"
+            android:onClick="toolBarClick"/>
+        <ImageButton android:id="@+id/action_loop_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@drawable/ic_action_av_loop"
+            android:onClick="toolBarClick"/>
+        <ImageButton android:id="@+id/action_trim_wav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@drawable/ic_action_content_cut"
+            android:onClick="toolBarClick"/>
+        <ImageButton android:id="@+id/action_set_volume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@drawable/ic_av_equalizer"
+            android:onClick="toolBarClick"/>
+        <ImageButton android:id="@+id/action_edit_beats"
+            android:layout_width="wrap_content"
+            android:layout_margin="4dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_action_show_beats"
+            android:onClick="toolBarClick"
+            android:visibility="gone"/>
+    </LinearLayout>
+
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
