--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -1,65 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nakedape.mixmaticlooppad.StoreActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/primary_dark">
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/coordinator_layout">
+<RelativeLayout
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ActionBarTheme"/>
     <ProgressBar android:id="@+id/center_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
-    <ListView android:id="@+id/store_item_list"
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_height="match_parent"/>
-    <!-- Sample Library -->
-    <LinearLayout android:id="@+id/tab_tray"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
+    <ListView android:id="@+id/sample_pack_listview"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:background="@color/primary_dark"
-        android:visibility="visible"
-        android:translationX="-120dp"
-        android:gravity="end">
-    <!-- Main tray-->
-        <LinearLayout android:id="@+id/tray"
-            android:layout_width="120dp"
+        android:layout_below="@id/my_toolbar"/>
+        <ListView android:id="@+id/purchases_listview"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/primary_dark">
-            <TextView android:id="@+id/sample_packs_button"
-                android:layout_width="wrap_content"
-                android:paddingLeft="8dp"
-                android:paddingStart="8dp"
-                android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:text="Sample Packs"
-                android:clickable="true"/>
-            <TextView android:id="@+id/app_extras_button"
-                android:layout_width="wrap_content"
-                android:paddingLeft="8dp"
-                android:paddingStart="8dp"
-                android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:text="App Extras"
-                android:clickable="true"/>
-        </LinearLayout>
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@color/primary_dark"
-            android:onClick="TrayTabClick">
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:background="@drawable/ic_action_navigation_more_vert"/>
-        </RelativeLayout>
-    </LinearLayout>
-
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_below="@id/my_toolbar"
+            android:visibility="gone"/>
 </RelativeLayout>
+    </android.support.design.widget.CoordinatorLayout>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:itemBackground="@color/primary"
+        app:itemIconTint="@color/md_white_1000"
+        app:itemTextColor="@color/md_white_1000"
+        app:menu="@menu/menu_store_navigation"/>
+</LinearLayout>
