--- a/app/src/main/res/layout/sample_list_item.xml
+++ b/app/src/main/res/layout/sample_list_item.xml
@@ -36,12 +36,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="sample file name"/>
+            android:text="sample file name"
+            android:textColor="@color/text_primary_light"/>
         <TextView
             android:id="@+id/sample_length"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="1:00:00"/>
+            android:text="1:00:00"
+            android:textColor="@color/text_primary_light"/>
     </LinearLayout>
 </RelativeLayout>
