--- a/app/src/main/res/layout/sample_pack_file_list_item.xml
+++ b/app/src/main/res/layout/sample_pack_file_list_item.xml
@@ -7,4 +7,5 @@
         android:drawableLeft="@drawable/ic_sound_wave_icon_green"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
-        android:text="File name"/>
+        android:text="File name"
+    android:textColor="@color/text_primary_light"/>
