--- a/app/src/main/res/layout/sample_pack_list_item.xml
+++ b/app/src/main/res/layout/sample_pack_list_item.xml
@@ -18,11 +18,13 @@
         <TextView android:id="@+id/title_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"
             android:textSize="16sp"
             android:text="Title Text"/>
         <TextView android:id="@+id/genre_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"
             android:text="Genre"/>
     </LinearLayout>
 </LinearLayout>
