--- a/app/src/main/res/menu/menu_launch_pad_activity.xml
+++ b/app/src/main/res/menu/menu_launch_pad_activity.xml
@@ -1,28 +1,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.nakedape.mixmaticlooppad.LaunchPadActivity" >
     <item android:id="@+id/action_play"
         android:title="@string/action_play_back"
         android:icon="@drawable/ic_action_av_play_arrow"
-        android:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
     <item android:id="@+id/action_rewind"
         android:title="@string/action_rewind"
         android:icon="@drawable/ic_action_av_fast_rewind"
-        android:showAsAction="ifRoom" />
+        app:showAsAction="always"/>
     <item android:id="@+id/action_fast_forward"
         android:title="@string/action_fast_forward"
         android:icon="@drawable/ic_action_av_fast_forward"
-        android:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/action_edit_mode"
         android:title="@string/action_edit_mode"
-        android:icon="@drawable/ic_action_editor_mode_edit"
-        android:showAsAction="ifRoom"/>
+        android:icon="@drawable/ic_action_settings"
+        app:showAsAction="always"/>
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
     <item android:id="@+id/action_reset"
-        android:title="@string/action_reset"/>
-    <item android:id="@+id/action_write_wav"
-        android:title="@string/action_save_mix" />
+        android:title="@string/action_reset"
+        app:showAsAction="never"/>
 </menu>
