--- a/app/src/main/res/menu/sample_edit_context.xml
+++ b/app/src/main/res/menu/sample_edit_context.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title="@string/action_trim_options"
         android:icon="@drawable/ic_action_content_cut"
-        android:showAsAction="ifRoom">
+        app:showAsAction="ifRoom">
         <menu>
             <item android:id="@+id/action_trim_wav"
                 android:title="@string/action_trim_wav"/>
@@ -16,5 +17,5 @@
         android:title="@string/action_loop_selection"
         android:checkable="true"
         android:icon="@drawable/ic_action_av_loop"
-        android:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"/>
 </menu>
