--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,14 +2,27 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Action Bar -->
+        <item name="windowActionModeOverlay">true</item>
         <!-- Main theme colors -->
-        <!--   your app branding color for the app bar -->
+        <!-- app branding color for the app bar -->
         <item name="colorPrimary">@color/primary</item>
+        <item name="colorAccent">@color/primary_accent</item>
         <!--   darker variant for the status bar and contextual app bars -->
         <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="android:textColorPrimary">@color/text_primary_dark</item>
+        <item name="android:textColorPrimary">@color/text_primary_light</item>
+    </style>
+
+    <style name="ActionBarTheme" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/primary</item>
+        <item name="popupTheme">@style/ActionBarPopupTheme</item>
+            <!-- backward compatibility -->
+        <item name="background">@color/primary</item>
+    </style>
+    <style name="ActionBarPopupTheme">
+        <item name="android:textColor">@color/text_primary_dark</item>
+        <item name="android:background">@color/md_white_1000</item>
     </style>
 
     <style name="FullscreenTheme" parent="android:Theme.NoTitleBar">
